kubernates/backstage-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  namespace: backstage
spec:
  ingressClassName: nginx
  rules:
  - host: backstage.local
    http:
      paths:
      - path: /backstage
        pathType: Prefix
        backend:
          service:
            name: backstage
            port:
              number: 80
